# libgif

./: .gitignore  meson.build  run.sh  x86_64-w64-mingw32.txt
examples/: basic_sdl.c
include/: gif.h
src/: gif.c
subprojects/: .gitignore
